--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,85 @@
 body {
-  position: absolute;
-  width: 550px;
-  height: 868px;
-  left: 65px;
-  top: 53px;
-
+  display: flex;
+  padding: 50px;
+  justify-content: center;
   background: #23252c;
 }
 .App {
-  position: absolute;
+  flex-direction: column;
   width: 317px;
-  height: 399px;
   left: 116px;
   top: 361px;
-
   background: #1a1b21;
 }
 .content-about {
-  width: 247px;
-  height: 201px;
-  left: 152px;
-  top: 535px;
+  padding: 0px 34px;
 }
 .content-about > h2 {
-  width: 242.71px;
-
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 150%;
-  /* or 24px */
-
   color: #f5f5f5;
 }
 .content-about > p {
   width: 247px;
-
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 10.24px;
   line-height: 150%;
-  /* or 15px */
-
   color: #dcdcdc;
 }
 .footer {
   width: 317px;
   height: 64px;
-
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-evenly;
   background: #161619;
   border-radius: 0px 0px 10px 10px;
+}
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btn {
+  flex-direction: row;
+}
+.btn-email {
+  width: 247px;
+  height: 34px;
+  left: 151px;
+  top: 469px;
+
+  /* white */
+
+  background: #ffffff;
+  /* gray/300 */
+
+  border: 1px solid #d1d5db;
+  box-sizing: border-box;
+  /* shadow/sm */
+
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+}
+.header > h3 {
+  height: 25.81px;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 25px;
+  color: #ffffff;
+}
+.header > p {
+  font-family: "Inter";
+  font-size: 12.8px;
+  color: #f3bf99;
+}
+.header > img {
+  width: 317px;
+  border-radius: 10px 10px 0px 0px;
 }
